--- a/fitness-passion/package.json
+++ b/fitness-passion/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "uploadcare": "^0.4.8",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-router": "^3.5.1",
